# todoist-tui

./: .gitignore  Cargo.toml  README.md
src/: api.rs  chunks.rs  config.rs  handler.rs  home.rs  input.rs  key_events.rs  main.rs  menu.rs  navigation.rs  project.rs  task.rs  ui.rs
